--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-env": "^7.11.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.8",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0"
   }
