--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^4.1.1",
     "mongoose": "^5.10.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
